# trial_division

./: Cargo.toml  README.md  build.sh
examples/: test_trial_division.py  threads0.py  threads1.py  trial_division.py
src/: lib.rs  trial_div.rs
